add handler test